src/components/TodoItem/TodoItem.css
.task-container {
    margin-top: 1rem ;
    padding: 0 1rem;
    display: flex;
    justify-content: space-between;
    background-color: white;
    height: 4rem;
    align-items: center;
    border-radius: 6px;
    box-shadow: 1px 1px 2px rgb(104, 104, 104);

}

.form {
display: flex;
gap: 1rem;
width: 100%;
justify-content: space-between;
align-items: center;
}

.label-container {
    display: flex;
    gap: 1rem;
}

.checkbox {
    border: 3px solid black;
    border-radius: 10px;
    width: 1.5rem;
    height: 1.5rem;
}

.paragraph {
    font-size: 1.5rem;
    margin: 0;
    padding: 0;
}

.done {
    text-decoration: line-through;
    color: rgb(189, 189, 189)
}

.buttons {
    display: flex;
    gap: 1rem;
}

.edit {
    background-color: rgb(108, 108, 230);
    border-radius: 6px;
    border: 1px solid rgb(108, 108, 230);
    color: white;
    width: 2.5rem;
    height: 2.5rem;
    transition: 0.2s;
    cursor: pointer;
}

.edit:hover {
    background-color: rgb(146, 146, 243);
}

.delete {
    background-color: rgb(241, 74, 74);
    border-radius: 6px;
    border: 1px solid rgb(241, 74, 74);
    color: white;
    width: 2.5rem;
    height: 2.5rem;
    transition: 0.2s;
    cursor: pointer;
}

.delete:hover {
    background-color: rgb(255, 135, 135);
}

.edit-input{
width: 15rem;
height: 2rem;
background-color: rgb(255, 255, 255);
border: none;
border-radius: 4px;
box-shadow: 0px 0px 4px rgb(141, 138, 138);
font-size: 1rem;
outline: none;
}

.edit-buttons{
    display: flex;
    gap: 1rem;
}

.save-button {
    background-color: rgb(0, 202, 34);
    border-radius: 6px;
    border: 1px solid rgb(0, 202, 34);
    width: 2.5rem;
    height: 2.5rem;
    transition: 0.2s;
    cursor: pointer;
}

.save-button:hover{
    background-color: rgb(94, 219, 115);
    border-color: rgb(94, 219, 115);
}

.cancel-button {
    background-color: rgb(241, 74, 74);
    border-radius: 6px;
    border: 1px solid rgb(241, 74, 74);
    width: 2.5rem;
    height: 2.5rem;
    transition: 0.2s;
    cursor: pointer;
}

.cancel-button:hover {
    background-color: rgb(255, 135, 135);
    border-color: rgb(255, 135, 135);
}

